--- a/src/Acme/UsersBundle/Resources/config/doctrine/User.mongodb.yml
+++ b/src/Acme/UsersBundle/Resources/config/doctrine/User.mongodb.yml
@@ -1,10 +1,9 @@
 Acme\UsersBundle\Document\User:
+    repositoryClass: Acme\UsersBundle\Repository\UserRepository
     fields:
         id:
             id:  true
         name:
             type: string
         password:
-            type: string
-        role:
             type: string
