--- a/src/Acme/UsersBundle/Resources/config/doctrine/User.mongodb.yml
+++ b/src/Acme/UsersBundle/Resources/config/doctrine/User.mongodb.yml
@@ -15,7 +15,7 @@ Acme\UsersBundle\Document\User:
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: name
     type: document
-    referenceMany:
-        groups:
-          targetDocument: \Acme\UsersBundle\Document\Group
+#    referenceMany:
+#        groups:
+#          targetDocument: \Acme\UsersBundle\Document\Group
     
