--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,12 @@ imports:
 parameters:
     locale: en
 
+assetic:
+    debug:          '%kernel.debug%'
+    use_controller: '%kernel.debug%'
+    filters:
+        cssrewrite: ~
+        
 framework:
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
