--- a/src/Acme/UsersBundle/Resources/config/routing.yml
+++ b/src/Acme/UsersBundle/Resources/config/routing.yml
@@ -14,5 +14,6 @@ acme_users_show:
     path:     /acme/users/show
     defaults: { _controller: AcmeUsersBundle:Default:show }
 acme_users_edit:
-    path:     /acme/users/edit
+    path:     /acme/users/edit/{id}
     defaults: { _controller: AcmeUsersBundle:Default:edit }
+    methods:  [GET, POST]
