--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,16 @@ security:
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    ryan:
+                        password: ryanpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: admin
+                        roles: 'ROLE_ADMIN'
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -13,8 +22,24 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        login_firewall:
+            pattern:   ^/login$
+            anonymous: ~
+        login_chk_firewall:
+            pattern:   ^/login_check$
+            anonymous: ~
+        secured_area:
+            pattern:    ^/
+            form_login: ~
+        
+        secured_area:
+            form_login:
+                csrf_token_generator: security.csrf.token_manager
         main:
             anonymous: ~
+            form_login:
+                login_path: /login
+                check_path: /login_check
             # activate different ways to authenticate
 
             # http_basic: ~
