--- a/src/Acme/UsersBundle/Resources/config/routing.yml
+++ b/src/Acme/UsersBundle/Resources/config/routing.yml
@@ -1,25 +1,25 @@
 acme_users_homepage:
     path:     /
-    defaults: { _controller: AcmeUsersBundle:Default:index }
+    defaults: { _controller: AcmeUsersBundle:Index:index }
 acme_users_create:
     path:     /acme/users/create
-    defaults: { _controller: AcmeUsersBundle:Default:create }
+    defaults: { _controller: AcmeUsersBundle:Index:create }
 acme_users_register:
     path:     /acme/users/register
-    defaults: { _controller: AcmeUsersBundle:Default:register }
+    defaults: { _controller: AcmeUsersBundle:Index:register }
 acme_users_create2:
     path:     /acme/users/create2
-    defaults: { _controller: AcmeUsersBundle:Default:create2 }
+    defaults: { _controller: AcmeUsersBundle:Index:create2 }
 acme_users_show:
     path:     /acme/users/show
-    defaults: { _controller: AcmeUsersBundle:Default:show }
+    defaults: { _controller: AcmeUsersBundle:Index:show }
 acme_users_edit:
     path:     /acme/users/edit/{id}
-    defaults: { _controller: AcmeUsersBundle:Default:edit }
+    defaults: { _controller: AcmeUsersBundle:Index:edit }
     methods:  [GET, POST]
 acme_users_delete:
     path:     /acme/users/delete/{id}
-    defaults: { _controller: AcmeUsersBundle:Default:delete }
+    defaults: { _controller: AcmeUsersBundle:Index:delete }
     methods:  [GET]
 acme_users_login:
     path:     /login
