--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,7 +7,8 @@ security:
         webservice:
             id: app.webservice_user_provider
     encoders:
-        Acme\UsersBundle\Security\User\WebserviceUser: plaintext
+        Acme\UsersBundle\Security\User\WebserviceUser: bcrypt
+        Acme\UsersBundle\Document\User: bcrypt
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
