--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,7 +23,7 @@ security:
             pattern:   ^/login$
             anonymous: ~
         register_firewall:
-            pattern:   ^/acme/users/register$
+            pattern:   ^/users/register$
             anonymous: ~
         secured_area:
             pattern:    ^/
@@ -46,7 +46,7 @@ security:
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
     access_control:
-        - { path: ^/acme/users/register$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/users/register$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER  }
         
